correction display page collection mobile /tablet

--- a/sass/collection.sub.scss
+++ b/sass/collection.sub.scss
@@ -105,6 +105,7 @@
                     @include media('<medium') {
                         height: calc(100vh - 205px);
                         overflow: auto;
+                        min-height: 600px;
                     }
                     h2 {
                         padding-bottom: 5px;
@@ -211,7 +212,7 @@
                 .link-produits {
                     position: absolute;
                     right: 0px;
-                    bottom: 140px;
+                    bottom: 110px;
                     @include media('<large') {
                         display: none;
                     }
